sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log__c/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>