sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log__c/fields/Apex_Method__c.field-meta.xml
<CustomField>
    <fullName>Apex_Method__c</fullName>
    <label>Apex Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>