sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>System Logs</relationshipLabel>
    <relationshipName>SystemLogs</relationshipName>
    <type>Lookup</type>
</CustomField>