sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log__c/fields/Create_Case__c.field-meta.xml
<CustomField>
    <fullName>Create_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Case</label>
    <type>Checkbox</type>
</CustomField>