sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log__c/fields/Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification__c</fullName>
    <description>The Email address to which a notification was sent, if applicable. This is defined within SystemLoggerSettings.</description>
    <label>Email Notification</label>
    <type>Email</type>
</CustomField>