sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log__c/fields/Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Name__c</fullName>
    <description>The name of the flow from which the log event was generated.</description>
    <label>Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>