sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log__c/fields/Flow_URL__c.field-meta.xml
<CustomField>
    <fullName>Flow_URL__c</fullName>
    <description>The URL of the flow which generated the System Log Event.</description>
    <inlineHelpText>The URL of the flow which generated the System Log Event.</inlineHelpText>
    <label>Flow URL</label>
    <type>Url</type>
</CustomField>