sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log__c/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <description>The severity of the log message.</description>
    <inlineHelpText>The severity of the log message.</inlineHelpText>
    <label>Log Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debug</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Warn</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>