sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log__c/fields/Logged_From__c.field-meta.xml
<CustomField>
    <fullName>Logged_From__c</fullName>
    <description>What type of process logged this event?</description>
    <inlineHelpText>What type of process logged this event?</inlineHelpText>
    <label>Logged From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Script</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>