sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The reported log message.</description>
    <inlineHelpText>The reported log message.</inlineHelpText>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>