sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log__c/fields/Related_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Id__c</fullName>
    <description>The Id of the related Object for which the log message was generated.</description>
    <inlineHelpText>The Id of the related Object for which the log message was generated.</inlineHelpText>
    <label>Related Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>