sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log__c/fields/Running_User__c.field-meta.xml
<CustomField>
    <fullName>Running_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User executing the process from which the log event was generated.</description>
    <inlineHelpText>The User executing the process from which the log event was generated.</inlineHelpText>
    <label>Running User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>System_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>