sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log__c/fields/Running_UserName__c.field-meta.xml
<CustomField>
    <fullName>Running_UserName__c</fullName>
    <description>The UserName (login name) of the running user when the log was generated.</description>
    <inlineHelpText>The UserName (login name) of the running user when the log was generated.</inlineHelpText>
    <label>Running UserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>