sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log__c/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this log record meets the criteria for sending an email notification. This is determined by the configuration of &amp;apos;SystemLoggerSetting&amp;apos; metadata records at runtime.</description>
    <inlineHelpText>Whether this log record meets the criteria for sending an email notification.</inlineHelpText>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>