sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>The stack trace when the log was generated.</description>
    <inlineHelpText>The stack trace when the log was generated.</inlineHelpText>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>