sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log__c/recordTypes/Apex.recordType-meta.xml
<RecordType>
    <fullName>Apex</fullName>
    <active>true</active>
    <label>Apex</label>
</RecordType>