sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log__c/recordTypes/Script.recordType-meta.xml
<RecordType>
    <fullName>Script</fullName>
    <active>true</active>
    <label>Script</label>
</RecordType>