sfdc-ac-transition-pkg/force-app/main/default/objects/System_Log__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Log_Level__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Message__c</columns>
    <columns>Running_UserName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>